# labroom-searching

./: .Dockerfile.swp  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Untitled  bringup.sh  docker-compose.yml  docker.md  flake.nix  packages.txt  run_no_rviz.sh
.github/workflows/: ci.yml  nix_ci.yml
archive/ddsm/: README.md  common.h  dual.cpp  motor_driver.c  same_vector.c
archive/joy/: README.md  echo  joy_echo.cpp  simple
archive/ros_ws/joy_driver/: package.xml
archive/ros_ws/keyboard_teleop/: package.xml
archive/scripts/: install_docker.sh  mv_same_vector.py
archive/set_motor_id/: README.md
archive/termios/: README.md  mv  mv_same.c  receive_data.c
docs/: README.md
lib/karto_sdk/: CMakeLists.txt
mecanum/: README.md  ddsm.c  dual.cpp  robot
move_motor/: README.md  mv_front.py  mv_same_vector.py  setup.sh
move_motor/ddsm/: common.h  motor_driver.c
move_motor/joy/: joy_echo.cpp  joy_simple.cpp
move_motor/mecanum/: compile.md  ddsm.c  dual.cpp  main.cpp  robot
move_motor/termios/: motor_driver.c  mv_motor.c  mv_same.c  receive_data.c
nix/: flake.nix
original/mecanum/: ddsm.c  dual.cpp  robot
original/set_motor_id/: motor_set_id.sh  send_query.sh
ros_ws/: Makefile  README.md  bringup.sh  frames_2026-01-09_12.40.21.gv  frames_2026-01-23_19.04.36.gv  frames_2026-03-01_21.11.53.gv  keyboard.sh  run_ddsm_keyboard.sh  rviz.sh
ros_ws/all-topic-move.bag/: all-topic-move.bag_1.mcap
ros_ws/all-topic-static.bag/: all-topic-static.bag_12.mcap  all-topic-static.bag_13.mcap  all-topic-static.bag_20.mcap  all-topic-static.bag_22.mcap  all-topic-static.bag_27.mcap  all-topic-static.bag_29.mcap  all-topic-static.bag_32.mcap  all-topic-static.bag_36.mcap  all-topic-static.bag_9.mcap  metadata.yaml
ros_ws/bags/all_topic/: metadata.yaml
ros_ws/bags/scan_topic/: metadata.yaml
ros_ws/frames/: frames_2026-01-23_22.11.22.gv  frames_2026-01-23_22.39.55.gv
ros_ws/install/: local_setup.sh  setup.ps1  setup.sh
ros_ws/launch/: ddsm_standalone.launch.py
ros_ws/log/: latest_build
ros_ws/rosbag/: memo.md
ros_ws/rosbag/all-topic-move.bag/: all-topic-move.bag_0.mcap  all-topic-move.bag_2.mcap  all-topic-move.bag_3.mcap
ros_ws/rosbag/all-topic-static.bag/: all-topic-static.bag_0.mcap  (+27 more)
ros_ws/scan-move.bag/: metadata.yaml
ros_ws/scan-move2.bag/: metadata.yaml  scan-move2.bag_2.mcap
ros_ws/src/ddsm_controller/: CMakeLists.txt  README.md  package.xml
ros_ws/src/ddsm_controller/config/: config.yaml
ros_ws/src/ddsm_controller/include/ddsm_controller/: ddsm_controller.hpp
ros_ws/src/ddsm_controller/src/: ddsm_controller.cpp
ros_ws/src/mecanum_controller/: CMakeLists.txt  README.md  package.xml
ros_ws/src/mecanum_controller/include/mecanum_controller/: mecanum_controller.hpp  mecanum_controller_node.hpp
ros_ws/src/mecanum_controller/src/: mecanum_controller.cpp
rox_mecanum/: common.h  ddsm.c  robot
scripts/ddsm/: drive_motor.py  motor_change_mode_to_vel.sh  motor_set_id.sh  send_query.sh
src/: set_id.cpp  set_motor_id
src/boost_mecanum/: README.md  motor.hpp  mv_same.cpp  mv_same.hpp
src/boost_motor/: README.md  motor.cpp  motor.hpp
temp/: hello.cpp
(+118 files in other folders)
